--- a/es.html
+++ b/es.html
@@ -91,7 +91,7 @@
 <section id="contacto" class="nl2"><div class="ct"><div class="nlc">
 <h2 class="nlt">El Protocolo Dominical</h2>
 <p class="nls">Investigación semanal sobre hongos funcionales, optimización intestinal y protocolos de biohacking. Más acceso temprano.</p>
-<div class="nlf"><label for="em" class="sr">Email</label><input id="em" type="email" class="nli" placeholder="Tu correo electrónico" autocomplete="email"><button class="nlb">Unirse al Lab</button></div>
+<iframe src="https://subscribe-forms.beehiiv.com/ec2ae8b1-2d10-4064-9ae7-c5f3602100ab" style="width:100%;max-width:700px;height:80px;margin:0 auto;border:none;background:transparent" scrolling="no"></iframe>
 <p class="nlp"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="m9 12 2 2 4-4"/></svg> Recomendamos productos basados en mérito científico.</p>
 </div></div></section>
 
