--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section id="contact" class="nl2"><div class="ct"><div class="nlc">
 <h2 class="nlt">The Sunday Protocol</h2>
 <p class="nls">Weekly deep-dive research on functional mushrooms, gut optimization, and biohacking protocols. Plus early access to the waitlist.</p>
-<div class="nlf"><label for="em" class="sr">Email</label><input id="em" type="email" class="nli" placeholder="Your email address" autocomplete="email"><button class="nlb">Join the Lab</button></div>
+<iframe src="https://subscribe-forms.beehiiv.com/ec2ae8b1-2d10-4064-9ae7-c5f3602100ab" style="width:100%;max-width:700px;height:80px;margin:0 auto;border:none;background:transparent" scrolling="no"></iframe>
 <p class="nlp"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="m9 12 2 2 4-4"/></svg> Affiliate disclosure: We recommend products based on scientific merit.</p>
 </div></div></section>
 
