--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="alternate" hreflang="en" href="https://flowstatewellness.com"><link rel="alternate" hreflang="es" href="https://flowstatewellness.com/es.html"><link rel="alternate" hreflang="x-default" href="https://flowstatewellness.com">
 <meta property="og:type" content="website"><meta property="og:title" content="FLŌW STATE | Biohacking Supplement Protocols"><meta property="og:description" content="Research-backed supplement protocols for optimized biology."><meta property="og:url" content="https://flowstatewellness.com"><meta property="og:site_name" content="FLŌW STATE"><meta property="og:locale" content="en_US"><meta property="og:locale:alternate" content="es_419">
 <meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="FLŌW STATE | Biohacking Supplement Protocols">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='46' stroke='%230A1128' stroke-width='6' fill='white'/><text x='50' y='72' text-anchor='middle' fill='%230A1128' font-size='42' font-weight='900' font-family='Inter,sans-serif' letter-spacing='-1'>FS</text></svg>">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 <!-- Beehiiv embed script -->
